working with crop image

--- a/Droid/packages.config
+++ b/Droid/packages.config
@@ -2,6 +2,7 @@
 <packages>
   <package id="Newtonsoft.Json" version="9.0.1" targetFramework="monoandroid71" />
   <package id="Plugin.CurrentActivity" version="1.0.1" targetFramework="monoandroid71" />
+  <package id="Plugin.ImageCropper" version="1.0.1" targetFramework="monoandroid71" />
   <package id="Plugin.Permissions" version="1.2.1" targetFramework="monoandroid71" />
   <package id="Xam.Plugin.AppInfo" version="1.0.8" targetFramework="monoandroid71" />
   <package id="Xam.Plugin.DeviceInfo" version="2.1.2" targetFramework="monoandroid71" />
