--- a/Droid/LaBuilderApp.Droid.csproj
+++ b/Droid/LaBuilderApp.Droid.csproj
@@ -150,6 +150,12 @@
     <Reference Include="Xamarin.Android.Support.v4">
       <HintPath>..\packages\Xamarin.Android.Support.v4.25.1.1\lib\MonoAndroid70\Xamarin.Android.Support.v4.dll</HintPath>
     </Reference>
+    <Reference Include="Plugin.ImageCropper.Abstractions">
+      <HintPath>..\packages\Plugin.ImageCropper.1.0.1\lib\MonoAndroid10\Plugin.ImageCropper.Abstractions.dll</HintPath>
+    </Reference>
+    <Reference Include="Plugin.ImageCropper">
+      <HintPath>..\packages\Plugin.ImageCropper.1.0.1\lib\MonoAndroid10\Plugin.ImageCropper.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\LaBuilderApp\LaBuilderApp.csproj">
