--- a/iOS/packages.config
+++ b/iOS/packages.config
@@ -1,6 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Newtonsoft.Json" version="9.0.1" targetFramework="xamarinios10" />
+  <package id="Plugin.ImageCropper" version="1.0.1" targetFramework="xamarinios10" />
+  <package id="Wapps.TOCrop" version="0.1.2" targetFramework="xamarinios10" />
   <package id="Xam.Plugin.AppInfo" version="1.0.8" targetFramework="xamarinios10" />
   <package id="Xam.Plugin.DeviceInfo" version="2.1.2" targetFramework="xamarinios10" />
   <package id="Xam.Plugin.Media" version="2.6.2" targetFramework="xamarinios10" />
