--- a/Droid/packages.config
+++ b/Droid/packages.config
@@ -4,6 +4,11 @@
   <package id="Plugin.CurrentActivity" version="1.0.1" targetFramework="monoandroid71" />
   <package id="Plugin.ImageCropper" version="1.0.1" targetFramework="monoandroid71" />
   <package id="Plugin.Permissions" version="1.2.1" targetFramework="monoandroid71" />
+  <package id="portable.aforge.core" version="2.2.5.60302" targetFramework="monoandroid71" />
+  <package id="portable.aforge.imaging" version="2.2.5.60302" targetFramework="monoandroid71" />
+  <package id="portable.aforge.math" version="2.2.5.60302" targetFramework="monoandroid71" />
+  <package id="shim" version="2.0.0" targetFramework="monoandroid71" />
+  <package id="shim.drawing" version="3.0.0" targetFramework="monoandroid71" />
   <package id="Xam.Plugin.AppInfo" version="1.0.8" targetFramework="monoandroid71" />
   <package id="Xam.Plugin.DeviceInfo" version="2.1.2" targetFramework="monoandroid71" />
   <package id="Xam.Plugin.Media" version="2.6.2" targetFramework="monoandroid71" />
@@ -23,7 +28,7 @@
   <package id="Xamarin.Android.Support.v7.Palette" version="25.1.1" targetFramework="monoandroid71" />
   <package id="Xamarin.Android.Support.v7.RecyclerView" version="25.1.1" targetFramework="monoandroid71" />
   <package id="Xamarin.Android.Support.Vector.Drawable" version="25.1.1" targetFramework="monoandroid71" />
-  <package id="Xamarin.Build.Download" version="0.4.2" targetFramework="monoandroid71" />
+  <package id="Xamarin.Build.Download" version="0.4.3" targetFramework="monoandroid71" />
   <package id="Xamarin.Estimote.Android" version="0.11.0.1" targetFramework="monoandroid71" />
   <package id="Xamarin.Forms" version="2.3.4.231" targetFramework="monoandroid71" />
   <package id="Xamarin.Forms.CarouselView" version="2.3.0-pre2" targetFramework="monoandroid71" />
