--- a/LaBuilderApp/project.json
+++ b/LaBuilderApp/project.json
@@ -7,6 +7,7 @@
     "Xam.Plugin.DeviceInfo": "2.1.2",
     "Xam.Plugin.Media": "2.6.2",
     "Xam.Plugins.Settings": "2.5.4",
+    "Xamarin.FFImageLoading.Forms": "2.2.9",
     "Xamarin.Forms": "2.3.4.231",
     "Xamarin.Forms.CarouselView": "2.3.0-pre2"
   },
