--- a/iOS/LaBuilderApp.iOS.csproj
+++ b/iOS/LaBuilderApp.iOS.csproj
@@ -142,20 +142,35 @@
     <Reference Include="TOCropBinding">
       <HintPath>..\packages\Wapps.TOCrop.0.1.2\lib\Xamarin.iOS\TOCropBinding.dll</HintPath>
     </Reference>
-    <Reference Include="Shim">
-      <HintPath>..\packages\shim.2.0.0\lib\Xamarin.iOS10\Shim.dll</HintPath>
-    </Reference>
     <Reference Include="AForge">
       <HintPath>..\packages\portable.aforge.core.2.2.5.60302\lib\portable-net45+netcore45+wpa81\AForge.dll</HintPath>
     </Reference>
     <Reference Include="AForge.Math">
       <HintPath>..\packages\portable.aforge.math.2.2.5.60302\lib\portable-net45+netcore45+wpa81\AForge.Math.dll</HintPath>
     </Reference>
-    <Reference Include="Shim.Drawing">
-      <HintPath>..\packages\shim.drawing.3.0.0\lib\Xamarin.iOS10\Shim.Drawing.dll</HintPath>
-    </Reference>
     <Reference Include="AForge.Imaging">
       <HintPath>..\packages\portable.aforge.imaging.2.2.5.60302\lib\portable-net45+netcore45+wpa81\AForge.Imaging.dll</HintPath>
+    </Reference>
+    <Reference Include="Shim">
+      <HintPath>..\packages\shim.2.0.1\lib\Xamarin.iOS10\Shim.dll</HintPath>
+    </Reference>
+    <Reference Include="Shim.Drawing">
+      <HintPath>..\packages\shim.drawing.3.0.1\lib\Xamarin.iOS10\Shim.Drawing.dll</HintPath>
+    </Reference>
+    <Reference Include="WebP.Touch">
+      <HintPath>..\packages\WebP.Touch.1.0.3\lib\Xamarin.iOS10\WebP.Touch.dll</HintPath>
+    </Reference>
+    <Reference Include="FFImageLoading">
+      <HintPath>..\packages\Xamarin.FFImageLoading.2.2.9\lib\Xamarin.iOS10\FFImageLoading.dll</HintPath>
+    </Reference>
+    <Reference Include="FFImageLoading.Platform">
+      <HintPath>..\packages\Xamarin.FFImageLoading.2.2.9\lib\Xamarin.iOS10\FFImageLoading.Platform.dll</HintPath>
+    </Reference>
+    <Reference Include="FFImageLoading.Forms">
+      <HintPath>..\packages\Xamarin.FFImageLoading.Forms.2.2.9\lib\Xamarin.iOS10\FFImageLoading.Forms.dll</HintPath>
+    </Reference>
+    <Reference Include="FFImageLoading.Forms.Touch">
+      <HintPath>..\packages\Xamarin.FFImageLoading.Forms.2.2.9\lib\Xamarin.iOS10\FFImageLoading.Forms.Touch.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
