--- a/iOS/packages.config
+++ b/iOS/packages.config
@@ -5,14 +5,17 @@
   <package id="portable.aforge.core" version="2.2.5.60302" targetFramework="xamarinios10" />
   <package id="portable.aforge.imaging" version="2.2.5.60302" targetFramework="xamarinios10" />
   <package id="portable.aforge.math" version="2.2.5.60302" targetFramework="xamarinios10" />
-  <package id="shim" version="2.0.0" targetFramework="xamarinios10" />
-  <package id="shim.drawing" version="3.0.0" targetFramework="xamarinios10" />
+  <package id="shim" version="2.0.1" targetFramework="xamarinios10" />
+  <package id="shim.drawing" version="3.0.1" targetFramework="xamarinios10" />
   <package id="Wapps.TOCrop" version="0.1.2" targetFramework="xamarinios10" />
+  <package id="WebP.Touch" version="1.0.3" targetFramework="xamarinios10" />
   <package id="Xam.Plugin.AppInfo" version="1.0.8" targetFramework="xamarinios10" />
   <package id="Xam.Plugin.DeviceInfo" version="2.1.2" targetFramework="xamarinios10" />
   <package id="Xam.Plugin.Media" version="2.6.2" targetFramework="xamarinios10" />
   <package id="Xam.Plugins.Settings" version="2.5.4" targetFramework="xamarinios10" />
   <package id="Xamarin.Estimote.iOS" version="4.7.3.2" targetFramework="xamarinios10" />
+  <package id="Xamarin.FFImageLoading" version="2.2.9" targetFramework="xamarinios10" />
+  <package id="Xamarin.FFImageLoading.Forms" version="2.2.9" targetFramework="xamarinios10" />
   <package id="Xamarin.Forms" version="2.3.4.231" targetFramework="xamarinios10" />
   <package id="Xamarin.Forms.CarouselView" version="2.3.0-pre2" targetFramework="xamarinios10" />
 </packages>
