--- a/Droid/LaBuilderApp.Droid.csproj
+++ b/Droid/LaBuilderApp.Droid.csproj
@@ -156,21 +156,6 @@
     <Reference Include="Plugin.ImageCropper">
       <HintPath>..\packages\Plugin.ImageCropper.1.0.1\lib\MonoAndroid10\Plugin.ImageCropper.dll</HintPath>
     </Reference>
-    <Reference Include="Shim">
-      <HintPath>..\packages\shim.2.0.0\lib\MonoAndroid1\Shim.dll</HintPath>
-    </Reference>
-    <Reference Include="AForge">
-      <HintPath>..\packages\portable.aforge.core.2.2.5.60302\lib\portable-net45+netcore45+wpa81\AForge.dll</HintPath>
-    </Reference>
-    <Reference Include="AForge.Math">
-      <HintPath>..\packages\portable.aforge.math.2.2.5.60302\lib\portable-net45+netcore45+wpa81\AForge.Math.dll</HintPath>
-    </Reference>
-    <Reference Include="Shim.Drawing">
-      <HintPath>..\packages\shim.drawing.3.0.0\lib\MonoAndroid1\Shim.Drawing.dll</HintPath>
-    </Reference>
-    <Reference Include="AForge.Imaging">
-      <HintPath>..\packages\portable.aforge.imaging.2.2.5.60302\lib\portable-net45+netcore45+wpa81\AForge.Imaging.dll</HintPath>
-    </Reference>
     <Reference Include="FFImageLoading">
       <HintPath>..\packages\Xamarin.FFImageLoading.2.2.9\lib\MonoAndroid10\FFImageLoading.dll</HintPath>
     </Reference>
@@ -204,6 +189,7 @@
     <Compile Include="Code\ScreenSize.cs" />
     <Compile Include="Code\CustomListViewRenderer.cs" />
     <Compile Include="Code\Beacons.cs" />
+    <Compile Include="Code\MyPicture.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\AboutResources.txt" />
