--- a/Droid/packages.config
+++ b/Droid/packages.config
@@ -7,23 +7,24 @@
   <package id="Xam.Plugin.AppInfo" version="1.0.8" targetFramework="monoandroid71" />
   <package id="Xam.Plugin.DeviceInfo" version="2.1.2" targetFramework="monoandroid71" />
   <package id="Xam.Plugin.Media" version="2.6.2" targetFramework="monoandroid71" />
-  <package id="Xam.Plugins.Settings" version="2.5.4" targetFramework="monoandroid71" />
-  <package id="Xamarin.Android.Support.Animated.Vector.Drawable" version="25.1.1" targetFramework="monoandroid71" />
-  <package id="Xamarin.Android.Support.Compat" version="25.1.1" targetFramework="monoandroid71" />
-  <package id="Xamarin.Android.Support.Core.UI" version="25.1.1" targetFramework="monoandroid71" />
-  <package id="Xamarin.Android.Support.Core.Utils" version="25.1.1" targetFramework="monoandroid71" />
-  <package id="Xamarin.Android.Support.Design" version="25.1.1" targetFramework="monoandroid71" />
-  <package id="Xamarin.Android.Support.Fragment" version="25.1.1" targetFramework="monoandroid71" />
-  <package id="Xamarin.Android.Support.Media.Compat" version="25.1.1" targetFramework="monoandroid71" />
-  <package id="Xamarin.Android.Support.Transition" version="25.1.1" targetFramework="monoandroid71" />
-  <package id="Xamarin.Android.Support.v4" version="25.1.1" targetFramework="monoandroid71" />
-  <package id="Xamarin.Android.Support.v7.AppCompat" version="25.1.1" targetFramework="monoandroid71" />
-  <package id="Xamarin.Android.Support.v7.CardView" version="25.1.1" targetFramework="monoandroid71" />
-  <package id="Xamarin.Android.Support.v7.MediaRouter" version="25.1.1" targetFramework="monoandroid71" />
-  <package id="Xamarin.Android.Support.v7.Palette" version="25.1.1" targetFramework="monoandroid71" />
-  <package id="Xamarin.Android.Support.v7.RecyclerView" version="25.1.1" targetFramework="monoandroid71" />
-  <package id="Xamarin.Android.Support.Vector.Drawable" version="25.1.1" targetFramework="monoandroid71" />
-  <package id="Xamarin.Build.Download" version="0.4.3" targetFramework="monoandroid71" />
+  <package id="Xam.Plugins.Settings" version="2.5.8" targetFramework="monoandroid71" />
+  <package id="Xamarin.Android.Support.Animated.Vector.Drawable" version="25.3.1" targetFramework="monoandroid71" />
+  <package id="Xamarin.Android.Support.Annotations" version="25.3.1" targetFramework="monoandroid71" />
+  <package id="Xamarin.Android.Support.Compat" version="25.3.1" targetFramework="monoandroid71" />
+  <package id="Xamarin.Android.Support.Core.UI" version="25.3.1" targetFramework="monoandroid71" />
+  <package id="Xamarin.Android.Support.Core.Utils" version="25.3.1" targetFramework="monoandroid71" />
+  <package id="Xamarin.Android.Support.Design" version="25.3.1" targetFramework="monoandroid71" />
+  <package id="Xamarin.Android.Support.Fragment" version="25.3.1" targetFramework="monoandroid71" />
+  <package id="Xamarin.Android.Support.Media.Compat" version="25.3.1" targetFramework="monoandroid71" />
+  <package id="Xamarin.Android.Support.Transition" version="25.3.1" targetFramework="monoandroid71" />
+  <package id="Xamarin.Android.Support.v4" version="25.3.1" targetFramework="monoandroid71" />
+  <package id="Xamarin.Android.Support.v7.AppCompat" version="25.3.1" targetFramework="monoandroid71" />
+  <package id="Xamarin.Android.Support.v7.CardView" version="25.3.1" targetFramework="monoandroid71" />
+  <package id="Xamarin.Android.Support.v7.MediaRouter" version="25.3.1" targetFramework="monoandroid71" />
+  <package id="Xamarin.Android.Support.v7.Palette" version="25.3.1" targetFramework="monoandroid71" />
+  <package id="Xamarin.Android.Support.v7.RecyclerView" version="25.3.1" targetFramework="monoandroid71" />
+  <package id="Xamarin.Android.Support.Vector.Drawable" version="25.3.1" targetFramework="monoandroid71" />
+  <package id="Xamarin.Build.Download" version="0.4.4" targetFramework="monoandroid71" />
   <package id="Xamarin.Estimote.Android" version="0.11.0.1" targetFramework="monoandroid71" />
   <package id="Xamarin.FFImageLoading" version="2.2.9" targetFramework="monoandroid71" />
   <package id="Xamarin.FFImageLoading.Forms" version="2.2.9" targetFramework="monoandroid71" />
